tests/paczka1/fuzzy1/34546758.err
Error in line 3: oeb15i A737 88,5
Error in line 4: oeb15i A56 5,6
Error in line 6: oeb15i S329 1,1
Error in line 9: oeb15i A460 56,3
Error in line 5: S329 A460 25,1
Error in line 17: lYOwvtqc S329 85,6
Error in line 36: MAra6w A460 9,10
